# pwart

./: CMakeLists.txt  README.md
include/: pwart.h  pwart_syslib.h
makescript/: sljit_make_config.mk
pwart/: def.h  extfunc.c  hostdef.c  make_config.mk  modparser.c  namespace.c  opgen_ctl.c  opgen_mem.c  opgen_misc.c  opgen_num.c  opgen_utils.c  pwart.c  util.c  wagen.c  watest.c
pwart_syslib/: libffi.c  libuv.c  libwasi.c  pwart_syslib.c  util.c  wasiexec.c
sljit/sljit_src/: sljitLir.c  sljitNativeX86_64.c
tests/: .gitignore  Makefile  benchsort.c  benchsort.wat  binary.wat  compare.wat  control.wat  convert.wat  extension1.wat  ffitestdll.c  syslibtest1.c  syslibtest1.wat  test1.wat  testexe3.c  testmain.c  testmain2.c  unary.wat
